# coap-led-server

./: .gitignore  NOTES.md  README.md
basic-coap-server/: prj.conf
basic-coap-server/src/: coap-server.c  coap.c  coap.h  endpoints.c  endpoints.h  led.c  led.h  main.c  utils.h
controller/: controller  controller.glade  requirements.txt
controller/wpantund/: wpantund.conf  wpantund.service
zephyr-examples/coap_server/: prj.conf
zephyr-examples/coap_server/src/: coap-server.c
zephyr-examples/echo_client/: overlay-ot.conf
zephyr-examples/echo_client/src/: echo-client.c
zephyr-examples/echo_server/: CMakeLists.txt  prj.conf  sample.yaml
zephyr-examples/echo_server/src/: common.h  echo-server.c  udp.c
